--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -105,6 +105,102 @@ p {
 	justify-content: center;
 	font-style: normal;
 }
+h3 {
+	font-weight: bolder;
+	border-bottom: 3px solid #eee;
+}
+
+/*Shop -----------------------------------------------------------------*/
+#shop {
+	background-color: #eee;
+	justify-content: space-between;
+	width: 100%;
+}
+#sideBar {
+	align-items: flex-start;
+	border-right: 2px solid white;
+	height: 100%;
+	width: 25%;
+}
+#mainProducts {
+	width: 70%;
+	flex-wrap: wrap;
+	justify-content: space-around;
+}
+#catagories {
+	align-items: flex-start;
+	font-size: small;
+	margin-left: 20%;
+	width: 80%;
+}
+.shop-product-container {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	justify-content: space-evenly;
+	background-color: white;
+	width: 40vh;
+	height: 40vh;
+}
+.image-container {
+	width: 80%;
+	height: 50%;
+}
+.quantity {
+	justify-content: space-between;
+	width: 50%;
+}
+input {
+	text-align: center;
+	width: 40%;
+}
+.product-button-div {
+	justify-content: space-evenly;
+	width: 80%;
+}
+.product-button {
+	background-color: #172ccd;
+	color: white;
+	border-radius: 10%;
+	padding: 5px;
+}
+/*Shop cart -----------------------------------------------------------*/
+#shopCart {
+	background-color: #eee;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+}
+#shopCartContainer {
+	background-color: #d5dbeb;
+	justify-content: space-evenly;
+	width: 90%;
+	height: 80%;
+}
+#cartItems {
+	justify-content: space-evenly;
+	height: 100%;
+	width: 30%;
+}
+#cartItemsContainer {
+	justify-content: space-evenly;
+	overflow-x: hidden;
+	overflow-y: auto;
+	overflow-wrap: break-word;
+	height: 100%;
+	width: 100%;
+}
+.cart-product-container {
+	justify-content: space-evenly;
+	height: 20%;
+	width: 100%;
+	padding-bottom: 10px;
+	border-bottom: 2px solid #eee;
+}
+.cart-image-container {
+	width: 30%;
+	height: 100%;
+}
+
 /*standard ------------------------------------------------------------*/
 .flex-r {
 	display: flex;
@@ -133,4 +229,15 @@ p {
 }
 .s-between {
 	justify-content: space-between;
+}
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none;
+	margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+	-moz-appearance: textfield;
 }
