--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -73,11 +73,14 @@ h1 {
 }
 #top-products {
 	justify-content: space-evenly;
+	border-radius: 5px;
 	width: 50%;
 	height: 90%;
-	background-color: rgba(255, 255, 255, 0.7);
+	background-color: rgba(255, 255, 255, 0.9);
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .image-slider {
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	height: 60%;
 	width: 60%;
 }
@@ -113,17 +116,18 @@ h3 {
 /*Shop -----------------------------------------------------------------*/
 #shop {
 	background-color: #eee;
-	justify-content: space-between;
+	justify-content: center;
 	width: 100%;
 }
 #sideBar {
 	align-items: flex-start;
-	border-right: 2px solid white;
+	background-color: #d5dbeb;
+	border-right: 2px solid #d5dbeb;
 	height: 100%;
 	width: 25%;
 }
 #mainProducts {
-	width: 70%;
+	width: 90%;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
@@ -138,6 +142,9 @@ h3 {
 	margin-bottom: 10px;
 	justify-content: space-evenly;
 	background-color: white;
+	border-radius: 5px;
+	box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+		rgba(0, 0, 0, 0.23) 0px 6px 6px;
 	width: 40vh;
 	height: 40vh;
 }
@@ -149,7 +156,7 @@ h3 {
 	justify-content: space-between;
 	width: 50%;
 }
-input {
+.quantity-input {
 	text-align: center;
 	width: 40%;
 }
@@ -173,16 +180,20 @@ input {
 #shopCartContainer {
 	background-color: #d5dbeb;
 	justify-content: space-evenly;
-	width: 90%;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	width: 80%;
 	height: 80%;
 }
+
 #cartItems {
 	justify-content: space-evenly;
-	height: 100%;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	height: 65vh;
 	width: 30%;
 }
 #cartItemsContainer {
-	justify-content: space-evenly;
+	justify-content: flex-start;
+	text-align: center;
 	overflow-x: hidden;
 	overflow-y: auto;
 	overflow-wrap: break-word;
@@ -192,7 +203,7 @@ input {
 .cart-product-container {
 	justify-content: space-evenly;
 	height: 20%;
-	width: 100%;
+	width: 90%;
 	padding-bottom: 10px;
 	border-bottom: 2px solid #eee;
 }
@@ -200,7 +211,73 @@ input {
 	width: 30%;
 	height: 100%;
 }
-
+#address {
+	background-color: #151a2e;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	color: white;
+	border-radius: 3%;
+	height: 90%;
+	width: 20%;
+}
+#creditCard {
+	background-color: #151a2e;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	color: white;
+	border-radius: 3%;
+	height: 90%;
+	width: 20%;
+}
+#addressContainer {
+	justify-content: space-evenly;
+	width: 100%;
+	height: 90%;
+}
+.form-div {
+	width: 100%;
+}
+.sub-form-div flex-c {
+	width: 45%;
+}
+.card-image-div {
+	text-align: center;
+	font-size: xxx-large;
+	width: 90%;
+}
+.address-input {
+	border: none;
+	width: 90%;
+	background-color: transparent;
+	border-bottom: 1px solid #eee;
+}
+#checkOutButton {
+	width: 90%;
+	background-color: #172ccd;
+	color: white;
+	border-radius: 5px;
+	padding: 10px;
+}
+label {
+	font-size: small;
+	align-self: flex-start;
+	margin-left: 5%;
+	color: #bdc1cd;
+}
+/* Items ----------------------------------------------------*/
+#items {
+	background-color: #eee;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+}
+#itemsTitle {
+	margin: 100px auto;
+	width: 50%;
+	text-align: center;
+	color: black;
+	border: 3px dashed #000;
+	font-weight: bolder;
+	font-size: xxx-large;
+}
 /*standard ------------------------------------------------------------*/
 .flex-r {
 	display: flex;
@@ -230,6 +307,7 @@ input {
 .s-between {
 	justify-content: space-between;
 }
+/*reseting number input----------------------------------------------------------*/
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
